fixed the circles and the alignment for diff sizes

--- a/design-project.css
+++ b/design-project.css
@@ -18,62 +18,47 @@ body {
     font-size: 2.5rem;
 }
 
-.dot2 {
+.dot {
     color: white;
     height: 105px;
     width: 105px;
+    border-radius: 50%;
+    border: 8px solid white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-family: 'Anton', sans-serif;
+    margin: auto;
+}
+
+.p {
+
+}
+
+.circle1 {
+    background-color: #00ABA9 !important;
+}
+
+
+.circle2 {
     background-color: #EB9D3A;
-    border-radius: 50%;
-    border: 8px solid white;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-family: 'Anton', sans-serif;
-
 }
 
-.dot1 {
-    color: white;
-    height: 105px;
-    width: 105px;
+.circle3 {
     background-color: #E6563B;
-    border-radius: 50%;
-    border: 8px solid white;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-family: 'Anton', sans-serif;
 }
 
-.dot3 {
-    color: white;
-    height: 105px;
-    width: 105px;
+.circle4 {
     background-color: #7CB06C;
-    border-radius: 50%;
-    border: 8px solid white;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-family: 'Anton', sans-serif;
-
 }
 
-.dot4 {
-    color: white;
-    height: 105px;
-    width: 105px;
-    background-color: #00ABA9;
-    border-radius: 50%;
-    border: 8px solid white;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-family: 'Anton', sans-serif;
-
-}
 
 .row {
-    display: flex;
-    justify-content: center;
+    /*display: flex;*/
+    /*width: 100%;*/
+    /*flex-direction: column;*/
+    /*flex-wrap: wrap;*/
+    /*align-items: center;*/
+    /*justify-content: flex-start;*/
+    /*justify-items: flex-start;*/
 }
